--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
 
     implementation project(":domain")
     implementation project(":data")
+    implementation project(":playmuzicservice")
 
 }
