--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".playmuzicservice.MuzicService" />
+        <service android:name=".playermuzicservice.MuzicService" />
     </application>
 
 </manifest>
