--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.google.android.material:material:1.2.0-alpha04'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
 }
