--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 }
