--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,9 +67,10 @@ dependencies {
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    //material design
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 }
