--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,10 +35,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Kotlin coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation LibrariesDependency.COROUTINES_CORE
 
     // Woker
-    implementation "androidx.work:work-runtime-ktx:2.1.0"
+    implementation LibrariesDependency.WORKER_KTX
 
     implementation project(":domain")
 }
