--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply from: "../ktlint.gradle"
+
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
