--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,18 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    viewBinding {
+        enabled = true
+    }
+
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -31,9 +37,6 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-    }
-    dataBinding {
-        enabled = true
     }
 }
 
